fix(bond): fix hero text align

--- a/src/views/ChooseBond/choose-bond.scss
+++ b/src/views/ChooseBond/choose-bond.scss
@@ -157,6 +157,10 @@
       margin-bottom: 10px;
 
       .bond-hero-card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 100%;
         padding: 10px 20px;
 
         .bond-hero-title {
